# CMakeConanProjectTemplate

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt  make.py
scripts/: git.py  move.py  notify.py  shell.py  shell_command.py  simple_git.py
scripts/misc/: notify.bat
